# DeepFoldPublic

./: .gitignore  .pre-commit-config.yaml  README.md  align.yml  dev.yml  environment.yml  init.sh  mkdocs.yml  pair.ipynb  predict.py  predict_from_pkl.logs  pyproject.toml  relax.py  setup.py  test.ipynb
.github/workflows/: clone_public.yml  deploy.yml  gh-pages.yml
config/alphafold/: model_1.yaml
csrc/evoformer_attn/: attention.cpp
deepfold/: config.py  cudagraph_wrapper.py  import_utils.py  loss.py  lr_scheduler.py  package_info.py  requirements.txt
deepfold/apps/: config.py
deepfold/common/: protein.py  residue_constants.py
docs/: index.md
nbs/: dist.ipynb  msa.ipynb
scripts/: _predict_from_features.py  activate_conda_env.sh  create_monomer_features.py  create_multimer_features.py  crop_monomer_features.py  disable_acs.sh  download_cameo.py  download_open_protein_set.sh  gather_assembly.py  generate_alphafold_feature_pkl.py  generate_empty_feature_pkl.py  generate_input_features_monomer.py  generate_pkl_msa_only.py  merge_domains_to_pkl.py  mmseqs_split_msas.py  multi_node_predict.sh  multi_node_training.sh  parse_mmcif.py  precompute_alignments.py  predict_from_features.py  predict_from_pkl.py  process_gathered_chains.py  search_mmseqs.py  search_mmseqs.sh  search_multimer.sh  summary.py  utils.py
tests/: alphafold_residue_constants.py  config.py  test_embedders.py  test_msa.py  test_nccl.py  test_outer_product_mean.py  test_primitives.py  test_transfroms.py  test_triangular_attention.py  test_triangular_multiplicative_update.py  utils.py
(+417 files in other folders)
